# GPU-particle-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md  particles.sln
cmake-modules/: FindGLFW.cmake
particles/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  main.cpp  particles.vcxproj  particles.vcxproj.filters
particles/gl/: OpenGlLoader.cpp  OpenGlLoader.h  flextGL.cpp  flextGL.cpp.template  flextGL.h  flextGL.h.template  flextGLInit.cpp  flextGLInit.cpp.template  profile.txt
particles/maths/: BoolVec.h  Compare.h  Constants.h  Mat4.h  Mat4.inl  Quaternion.cpp  Quaternion.h  Vec2.h  Vec3.h  Vec4.h  VecBase.h  mathsFuncs.h  swizzle.h  vectors.h
particles/tga/: tga.c  tga.h
particles/utility/: Clock.cpp  Clock.h
res/: particle.tga
